samples/_failures_safe/1761787600_a0a66b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b117ab4.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_0b117ab4.c:162:16: error: missing terminating " character
  162 |         printf("Line %d, Column %
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0b117ab4.c:162:9: error: expected expression at end of input
  162 |         printf("Line %d, Column %
      |         ^~~~~~
./samples/SAFE/__tmp_0b117ab4.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b117ab4.c:162:9: error: expected declaration or statement at end of input
